# 15PelinRatkaisija

./: README.md
15peli/: .pylintrc  pyproject.toml  tasks.py
15peli/src/: algoritmi.py  index.py  paavalikko.py  peligeneraattori.py  pelikasittelija.py  pelinakyma.py  ruudukonkasittelija.py  siirtokasittelija.py  tilasto.py
15peli/src/tests/: algoritmi_test.py  peligeneraattori_test.py  pelikasittelija_test.py  ruudukonkasittelija_test.py  siirtokasittelija_test.py
Dokumentaatio/: Kayttoohje.md  Maarittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Tuntiraportti.md  Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md
