[tool.poetry]
name = "15peli"
version = "0.1.0"
description = ""
authors = ["Elias Toukolehto <elias.toukolehto@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
